<resources>
    <string name="app_name" translatable="false">Filters</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3147006186659543/6545200666</string>
    <string name="admob_id" translatable="false">ca-app-pub-3147006186659543~4445102191 </string>
    <string name="Guide_Slide_1" translatable="false">Welcome to Filters!</string>
    <string name="Guide_Slide_2">Take photos!\nWith many Filters</string>
    <string name="Guide_Slide_3">Make your own Filter!</string>
    <string name="permission_page_title">Required Permissions</string>
    <string name="camera_permission" translatable="false">Camera</string>
    <string name="storage_permission" translatable="false">Storage</string>
    <string name="camera_permission_summary">Permissions for taking photos</string>
    <string name="storage_permission_summary">Permissions required for saving and managing photos</string>
    <string name="picture" translatable="false">Picture</string>
    <string name="description_info" translatable="false">Info</string>
    <string name="request_permission" translatable="false">This sample needs camera permission.</string>
    <string name="camera_error" translatable="false">This device doesn\'t support Camera2 API.</string>
    <string name="tedpermission_setting" >Setting</string>
    <string name="tedpermission_close" >Close</string>
    <string name="tedpermission_confirm" >Confirm</string>
    <string name="permission_denied" translatable="false">"If you reject permission,you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]"</string>
    <string name="OriginalFilter_Name">Original</string>
    <string name="OriginalFilter_msg">" You chose the original source.\\nPlease, Select a different filter. :)     "</string>
    <string-array name="default_filter_name_array">
        <item>Original</item>
        <item>Cherry</item>
        <item>Forest</item>
        <item>Yellow</item>
        <item>GrayScale</item>
        <item>Long ago</item>
        <item>Food</item>
        <item>Dreamy</item>
    </string-array>
    <string name="RetroFilter_Page_1">Color</string>
    <string name="RetroFilter_Page_2">Light</string>
    <string name="RetroFilter_Page_3">Focus</string>
    <string name="RetroFilter_Page_4">Retro</string>
    <string name="RetroFilter_COLOR_RATIO">Ratio</string>
    <string name="RetroFilter_RGB_R">Red</string>
    <string name="RetroFilter_RGB_G">Green</string>
    <string name="RetroFilter_RGB_B">Blue</string>
    <string name="RetroFilter_BRIGHTNESS">Bright</string>
    <string name="RetroFilter_SATURATION">Saturation</string>
    <string name="RetroFilter_BLUR">Intensity</string>
    <string name="RetroFilter_FOCUS">Radius</string>
    <string name="RetroFilter_ABERRATION">Aberration</string>
    <string name="RetroFilter_NOISE_INTENSITY">Noise</string>
    <string name="summary_support">Please feedback the improvements and inconvenience.</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_about" translatable="false">About</string>
    <string name="summary_about" >Open Source License, Privacy Policy, Terms of Service</string>
    <string name="key_about" translatable="false">key_about</string>
    <string name="app_version" translatable="false">1.0</string>
    <string name="key_app_version" translatable="false">key_app_version</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">questions frequently asked</string>
    <string name="title_version">Version</string>
    <string name="title_vibrate" translatable="false">Vibrate</string>
    <string name="choose_email_client" translatable="false">Choose email client</string>
    <string name="summary_vibrate" translatable="false">Vibrate on long press</string>
    <string name="key_send_feedback" translatable="false">key_send_feedback</string>
    <string name="key_review" translatable="false">key_review</string>
    <string name="title_review">Review</string>
    <string name="summary_review">Write a review and rate</string>
    <string name="default_gallery_storage" translatable="false">My Videos</string>
    <string name="key_gallery_name" translatable="false">key_gallery_name</string>
    <string name="title_gallery_storage">Storage Path</string>
    <string name="key_faq" translatable="false">key_faq</string>
    <string name="key_share" translatable="false">key_share</string>
    <string name="title_share">Share</string>
    <string name="summary_share">Share this app with your friends!</string>
    <string name="key_terms" translatable="false">key_terms</string>
    <string name="title_terms">Terms of Services</string>
    <string name="key_open_license" translatable="false">key_open_license</string>
    <string name="title_open_license">Open License</string>
    <string name="key_privacy" translatable="false">key_privacy</string>
    <string name="title_privacy">Privacy Policy</string>
</resources>